// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Renders ElectionInfoBar 1`] = `
<div>
  <div
    class="sc-fFehDp cNyMJH"
  >
    <div
      class="sc-pVTma fVjNBH"
    >
      <strong
        class="sc-hBURRC fZPBCA"
      >
        General Election
      </strong>
       —
       
      <span
        class="sc-hBURRC fZPBCA"
      >
        Tuesday, November 3, 2020
      </span>
      <div
        class="sc-ksdxAp ginpgn"
      >
        <span
          class="sc-hBURRC fZPBCA"
        >
          All Precincts
        </span>
         —
         
        <span
          class="sc-hBURRC fZPBCA"
        >
          Franklin County
          ,
           
          State of Hamilton
        </span>
      </div>
    </div>
    <div
      class="sc-bkkfTU cWyUg"
    />
    <div
      class="sc-pVTma cSFpjP"
    >
      <div
        class="sc-ksdxAp ginpgn"
      >
        Election ID
      </div>
      <strong>
        2f6b1553c7
      </strong>
    </div>
  </div>
</div>
`;

exports[`Renders admin ElectionInfoBar with precinct set 1`] = `
<div>
  <div
    class="sc-fFehDp cNyMJH"
  >
    <div
      class="sc-pVTma fVjNBH"
    >
      <strong
        class="sc-hBURRC fZPBCA"
      >
        General Election
      </strong>
       —
       
      <span
        class="sc-hBURRC fZPBCA"
      >
        Tuesday, November 3, 2020
      </span>
      <div
        class="sc-ksdxAp ginpgn"
      >
        <span
          class="sc-hBURRC fZPBCA"
        >
          Center Springfield
        </span>
         —
         
        <span
          class="sc-hBURRC fZPBCA"
        >
          Franklin County
          ,
           
          State of Hamilton
        </span>
      </div>
    </div>
    <div
      class="sc-bkkfTU cWyUg"
    />
    <div
      class="sc-pVTma cSFpjP"
    >
      <div
        class="sc-ksdxAp ginpgn"
      >
        Software Version
      </div>
      <strong>
        DEV
      </strong>
    </div>
    <div
      class="sc-pVTma cSFpjP"
    >
      <div
        class="sc-ksdxAp ginpgn"
      >
        Machine ID
      </div>
      <strong>
        0002
      </strong>
    </div>
    <div
      class="sc-pVTma cSFpjP"
    >
      <div
        class="sc-ksdxAp ginpgn"
      >
        Election ID
      </div>
      <strong>
        2f6b1553c7
      </strong>
    </div>
  </div>
</div>
`;
